@@ -8,6 +8,9 @@ remctl 2.10 (unreleased)
     tokens in an effort to keep bugs like this from going unnoticed in the
     future.
 
+    Allow port and principal to be omitted in calls to Net::Remctl::open,
+    matching the documentation.  Thanks, Marcus Watts.
+
     Change the Net::Remctl documentation for remctl() to suggest 0 and the
     empty string as default values for port and principal, since this
     avoids Perl warnings.
